# ZrRender

./: .gitignore  CMakeLists.txt
include/: BVH.hpp  aabb.hpp  camera.hpp  clock.hpp  color.hpp  dielectric.hpp  lambertian.hpp  material.hpp  metal.hpp  noise.hpp  object.hpp  random.hpp  ray.hpp  shape.hpp  texture.hpp  utilities.hpp  vec3.hpp
src/: main.cpp
